--- a/frontend/src/components/camera/camera.css
+++ b/frontend/src/components/camera/camera.css
@@ -5,7 +5,7 @@
   }
   
   .webcam-feed {
-    width: 500px;
+    height: 40%;
     border-radius: 8px;
   }
   
