--- a/frontend/src/pages/tournamentview/tournamentview.css
+++ b/frontend/src/pages/tournamentview/tournamentview.css
@@ -1,7 +1,3 @@
-.tournament-view {
-  padding-top: calc(20px + 2rem)
-}
-
 .heading {
   font-size: 4rem;
   font-weight: 700;
@@ -10,31 +6,6 @@
   
 .heading span {
   color: black;
-}
-
-.tournament-table {
-  width: 100%;
-  max-width: 1200px;
-  margin: 2rem auto;
-  border-collapse: collapse;
-  font-size: 1rem;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.05);
-}
-
-.tournament-table th,
-.tournament-table td {
-  padding: 1rem 1.5rem;
-  text-align: left;
-}
-
-.tournament-table th {
-  background-color: var(--main-color);
-  color: white;
-  font-weight: 600;
-}
-
-.tournament-table tbody tr:nth-child(even) {
-  background-color: rgba(81, 154, 206, 0.08);
 }
 
 @media (prefers-color-scheme: dark) {
